# k_vector

./: .gitignore  README.md  pyproject.toml
k_vector/: manage.py
k_vector/authentication/: urls.py  views.py
k_vector/authentication/templates/authentication/: login_form.html
k_vector/forum_page/: apps.py  forms.py  models.py  urls.py  views.py
k_vector/forum_page/migrations/: 0001_initial.py  0002_auto_20211126_1404.py  0003_news_news_image.py
k_vector/forum_page/templates/forum_page/: add_news.html  news_page.html
k_vector/k_vector/: Secrets_example.py  asgi.py  secrets.py  settings.py  urls.py  views.py  wsgi.py
k_vector/pathology/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
k_vector/pathology/migrations/: 0001_initial.py  0002_sample_category.py  0003_auto_20210103_1256.py  0004_auto_20220110_1907.py
k_vector/pathology/static/pathology/css/: bootstrap.css  style.css
k_vector/pathology/static/pathology/js/: carousel.js  menu.js  zoom.js
k_vector/pathology/templates/pathology/: base.html  carousel.html  header.html  index.html  sample.html  sample_edit_form.html  sample_form.html  samples_list.html  samples_list_sidebar.html  success_page.html  team.html
k_vector/pathology/templatetags/: pathology_extras.py
